--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 <body class="list" id="top">
     <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://angelitora.github.io/picture.jpg" alt="Rosa van den Ende" title="Rosa van den Ende"
+        <img draggable="false" src="https://angelitora.github.io/angel-ito.png" alt="Angel Ruiz-Angulo" title="Angel Ruiz-Angulo"
             height="160" width="160" />
         <h1>Angel Ruiz-Angulo</h1>
         <span>associate professor university of Iceland</span><div class="social-icons">
@@ -129,9 +129,9 @@
                     Publications
                 </span>
             </a>
-            <a class="button" href="talks/" rel="noopener" title="Talks">
+            <a class="button" href="students/" rel="noopener" title="Students">
                 <span class="button-inner">
-                    Talks
+                    Students
                 </span>
             </a>
             <a class="button" href="cv_rosa.pdf" rel="noopener" title="Resume">
