--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   "description": "I am an oceanographer/biker/baker.",
   "thumbnailUrl": "https://angelitora.github.io/favicon.ico",
   "sameAs": [
-      "mailto:rosa.van-den-ende@univ-paris1.fr", "location/", "https://scholar.google.com/citations?user=jwrYE5sAAAAJ\u0026hl=fr", "https://linkedin.com/in/rosavandenende", "https://orcid.org/0000-0002-9417-1075"
+      "mailto:angel@hi.is", "location/", "https://scholar.google.com/citations?user=Lb1n85YAAAAJ\u0026hl=en\u0026oi=ao", "https://www.linkedin.com/in/angel-ruiz-angulo-1160a71/", "https://orcid.org/0000-0002-7292-3002"
   ]
 }
 </script>
@@ -90,7 +90,7 @@
             height="160" width="160" />
         <h1>Angel Ruiz-Angulo</h1>
         <span>associate professor university of Iceland</span><div class="social-icons">
-    <a href="mailto:rosa.van-den-ende@univ-paris1.fr" target="_blank" rel="noopener noreferrer me" title="Email">
+    <a href="mailto:angel@hi.is" target="_blank" rel="noopener noreferrer me" title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
     <polyline points="22,6 12,13 2,6"></polyline>
@@ -99,14 +99,14 @@
     <a href="location/" target="_blank" rel="noopener noreferrer me" title="Location">
         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M12 6.5A2.5 2.5 0 0 1 14.5 9a2.5 2.5 0 0 1-2.5 2.5A2.5 2.5 0 0 1 9.5 9A2.5 2.5 0 0 1 12 6.5M12 2a7 7 0 0 1 7 7c0 5.25-7 13-7 13S5 14.25 5 9a7 7 0 0 1 7-7m0 2a5 5 0 0 0-5 5c0 1 0 3 5 9.71C17 12 17 10 17 9a5 5 0 0 0-5-5Z"/></svg>
     </a>
-    <a href="https://scholar.google.com/citations?user=jwrYE5sAAAAJ&amp;hl=fr" target="_blank" rel="noopener noreferrer me" title="Google Scholar">
+    <a href="https://scholar.google.com/citations?user=Lb1n85YAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener noreferrer me" title="Google Scholar">
         <svg viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
      stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
      <path
          d="M5.242 13.769L0.5 9.5 12 1l11.5 9-5.242 3.769C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z" />
  </svg>
     </a>
-    <a href="https://linkedin.com/in/rosavandenende" target="_blank" rel="noopener noreferrer me" title="LinkedIn">
+    <a href="https://www.linkedin.com/in/angel-ruiz-angulo-1160a71/" target="_blank" rel="noopener noreferrer me" title="LinkedIn">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -114,7 +114,7 @@
     <circle cx="4" cy="4" r="2"></circle>
 </svg>
     </a>
-    <a href="https://orcid.org/0000-0002-9417-1075" target="_blank" rel="noopener noreferrer me" title="ORCID">
+    <a href="https://orcid.org/0000-0002-7292-3002" target="_blank" rel="noopener noreferrer me" title="ORCID">
         <svg width="24" height="24" viewBox="0 0 256 256" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd" clip-rule="evenodd"
         d="M128 256C198.7 256 256 198.7 256 128C256 57.3 198.7 0 128 0C57.3 0 0 57.3 0 128C0 198.7 57.3 256 128 256ZM70.9 186.2H86.3V127.5V79.0999H70.9V186.2ZM108.9 79.0999H150.5C190.1 79.0999 207.5 107.4 207.5 132.7C207.5 160.2 186 186.3 150.7 186.3H108.9V79.0999ZM124.3 172.4H148.8C183.7 172.4 191.7 145.9 191.7 132.7C191.7 111.2 178 93 148 93H124.3V172.4ZM78.6 66.8999C84.2 66.8999 88.7 62.2999 88.7 56.7999C88.7 51.2999 84.2 46.7 78.6 46.7C73 46.7 68.5 51.2 68.5 56.7999C68.5 62.2999 73 66.8999 78.6 66.8999Z"
