--- a/public/courses/course2/index.html
+++ b/public/courses/course2/index.html
@@ -151,8 +151,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/talks/" title="Talks">
-                    <span>Talks</span>
+                <a href="https://angelitora.github.io/students/" title="Students">
+                    <span>Students</span>
                 </a>
             </li>
             <li>
