--- a/public/location/index.html
+++ b/public/location/index.html
@@ -143,8 +143,8 @@ On the map: "/>
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/talks/" title="Talks">
-                    <span>Talks</span>
+                <a href="https://angelitora.github.io/students/" title="Students">
+                    <span>Students</span>
                 </a>
             </li>
             <li>
