--- a/public/404.html
+++ b/public/404.html
@@ -90,8 +90,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/talks/" title="Talks">
-                    <span>Talks</span>
+                <a href="https://angelitora.github.io/students/" title="Students">
+                    <span>Students</span>
                 </a>
             </li>
             <li>
