--- a/public/404.html
+++ b/public/404.html
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="I am an oceanographer/biker/baker.">
 <meta name="author" content="Name">
-<link rel="canonical" href="https://angelitora.github.io/404.html">
+<link rel="canonical" href="/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://angelitora.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://angelitora.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://angelitora.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://angelitora.github.io/apple-touch-icon.png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://angelitora.github.io/404.html">
+<link rel="alternate" hreflang="en" href="/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -30,7 +30,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="I am an oceanographer/biker/baker." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://angelitora.github.io/404.html" />
+<meta property="og:url" content="/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -73,9 +73,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://angelitora.github.io/" accesskey="h" title="Angel Ruiz-Angulo">
+            <a href="/" accesskey="h" title="Angel Ruiz-Angulo">
              
-                <img src="https://angelitora.github.io/favicon.ico" alt="" aria-label="logo"
+                <img src="/favicon.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Angel Ruiz-Angulo</a>
             <div class="logo-switches">
@@ -85,17 +85,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://angelitora.github.io/papers/" title="Publications">
+                <a href="/papers/" title="Publications">
                     <span>Publications</span>
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/students/" title="Students">
+                <a href="/students/" title="Students">
                     <span>Students</span>
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/cv_rosa.pdf" title="Resume">
+                <a href="/cv_rosa.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
