--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
 
 <meta name="description" content="I am an oceanographer/biker/baker.">
 <meta name="author" content="Name">
-<link rel="canonical" href="https://angelitora.github.io/">
+<link rel="canonical" href="/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://angelitora.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://angelitora.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://angelitora.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://angelitora.github.io/apple-touch-icon.png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://angelitora.github.io/index.xml">
-<link rel="alternate" hreflang="en" href="https://angelitora.github.io/">
+<link rel="alternate" type="application/rss+xml" href="/index.xml">
+<link rel="alternate" hreflang="en" href="/">
 <noscript>
     <style>
         #theme-toggle,
@@ -32,7 +32,7 @@
 </noscript><meta property="og:title" content="Angel Ruiz-Angulo" />
 <meta property="og:description" content="I am an oceanographer/biker/baker." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://angelitora.github.io/" />
+<meta property="og:url" content="/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Angel Ruiz-Angulo"/>
@@ -43,9 +43,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Angel Ruiz-Angulo",
-  "url": "https://angelitora.github.io/",
+  "url": "/",
   "description": "I am an oceanographer/biker/baker.",
-  "thumbnailUrl": "https://angelitora.github.io/favicon.ico",
+  "thumbnailUrl": "/favicon.ico",
   "sameAs": [
       "mailto:angel@hi.is", "location/", "https://scholar.google.com/citations?user=Lb1n85YAAAAJ\u0026hl=en\u0026oi=ao", "https://www.linkedin.com/in/angel-ruiz-angulo-1160a71/", "https://orcid.org/0000-0002-7292-3002"
   ]
@@ -86,7 +86,7 @@
 <body class="list" id="top">
     <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://angelitora.github.io/angel-ito.png" alt="Angel Ruiz-Angulo" title="Angel Ruiz-Angulo"
+        <img draggable="false" src="/angel-ito.png" alt="Angel Ruiz-Angulo" title="Angel Ruiz-Angulo"
             height="160" width="160" />
         <h1>Angel Ruiz-Angulo</h1>
         <span>associate professor university of Iceland</span><div class="social-icons">
