--- a/public/location/index.html
+++ b/public/location/index.html
@@ -10,16 +10,16 @@
 <meta name="description" content="Office address University of Iceland - Askja, Faculty of Earth Sciences Sturlugata 7, 102 Reykjavík Iceland
 On the map: ">
 <meta name="author" content="Name">
-<link rel="canonical" href="https://angelitora.github.io/location/">
+<link rel="canonical" href="/location/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://angelitora.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://angelitora.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://angelitora.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://angelitora.github.io/apple-touch-icon.png">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://angelitora.github.io/location/">
+<link rel="alternate" hreflang="en" href="/location/">
 <noscript>
     <style>
         #theme-toggle,
@@ -32,7 +32,7 @@ On the map: ">
 <meta property="og:description" content="Office address University of Iceland - Askja, Faculty of Earth Sciences Sturlugata 7, 102 Reykjavík Iceland
 On the map: " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://angelitora.github.io/location/" /><meta property="article:section" content="" />
+<meta property="og:url" content="/location/" /><meta property="article:section" content="" />
 
 
 
@@ -51,7 +51,7 @@ On the map: "/>
       "@type": "ListItem",
       "position":  1 ,
       "name": "Location",
-      "item": "https://angelitora.github.io/location/"
+      "item": "/location/"
     }
   ]
 }
@@ -77,14 +77,14 @@ On the map: "/>
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://angelitora.github.io/location/"
+    "@id": "/location/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "Angel Ruiz-Angulo",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://angelitora.github.io/favicon.ico"
+      "url": "/favicon.ico"
     }
   }
 }
@@ -126,9 +126,9 @@ On the map: "/>
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://angelitora.github.io/" accesskey="h" title="Angel Ruiz-Angulo">
+            <a href="/" accesskey="h" title="Angel Ruiz-Angulo">
              
-                <img src="https://angelitora.github.io/favicon.ico" alt="" aria-label="logo"
+                <img src="/favicon.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Angel Ruiz-Angulo</a>
             <div class="logo-switches">
@@ -138,17 +138,17 @@ On the map: "/>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://angelitora.github.io/papers/" title="Publications">
+                <a href="/papers/" title="Publications">
                     <span>Publications</span>
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/students/" title="Students">
+                <a href="/students/" title="Students">
                     <span>Students</span>
                 </a>
             </li>
             <li>
-                <a href="https://angelitora.github.io/cv_rosa.pdf" title="Resume">
+                <a href="/cv_rosa.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
