--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
                     Students
                 </span>
             </a>
-            <a class="button" href="cv_rosa.pdf" rel="noopener" title="Resume">
+            <a class="button" href="RuizAngulo_CV_2024.pdf" rel="noopener" title="Resume">
                 <span class="button-inner">
                     Resume
                 </span>
