--- a/public/courses/course2/index.html
+++ b/public/courses/course2/index.html
@@ -156,7 +156,7 @@
                 </a>
             </li>
             <li>
-                <a href="/cv_rosa.pdf" title="Resume">
+                <a href="/RuizAngulo_CV_2024.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
