--- a/public/location/index.html
+++ b/public/location/index.html
@@ -148,7 +148,7 @@ On the map: "/>
                 </a>
             </li>
             <li>
-                <a href="/cv_rosa.pdf" title="Resume">
+                <a href="/RuizAngulo_CV_2024.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
