--- a/public/location/index.html
+++ b/public/location/index.html
@@ -148,6 +148,11 @@ On the map: "/>
                 </a>
             </li>
             <li>
+                <a href="/news/" title="News">
+                    <span>News</span>
+                </a>
+            </li>
+            <li>
                 <a href="/RuizAngulo_CV_2024.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
