--- a/public/papers/paper2/index.html
+++ b/public/papers/paper2/index.html
@@ -153,6 +153,11 @@
                 </a>
             </li>
             <li>
+                <a href="/news/" title="News">
+                    <span>News</span>
+                </a>
+            </li>
+            <li>
                 <a href="/RuizAngulo_CV_2024.pdf" title="Resume">
                     <span>Resume</span>
                 </a>
