--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,11 @@
                     Students
                 </span>
             </a>
+            <a class="button" href="news/" rel="noopener" title="News">
+                <span class="button-inner">
+                    News
+                </span>
+            </a>
             <a class="button" href="RuizAngulo_CV_2024.pdf" rel="noopener" title="Resume">
                 <span class="button-inner">
                     Resume
