--- a/public/papers/paper1/index.html
+++ b/public/papers/paper1/index.html
@@ -49,7 +49,7 @@
     {
       "@type": "ListItem",
       "position":  1 ,
-      "name": "Papers",
+      "name": "Publications",
       "item": "/papers/"
     }
     {
