--- a/public/404.html
+++ b/public/404.html
@@ -85,7 +85,7 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="/papers/" title="Publications">
+                <a href="/publications/" title="Publications">
                     <span>Publications</span>
                 </a>
             </li>
