--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="papers/" rel="noopener" title="Publications">
+            <a class="button" href="publications/" rel="noopener" title="Publications">
                 <span class="button-inner">
                     Publications
                 </span>
