--- a/public/location/index.html
+++ b/public/location/index.html
@@ -138,7 +138,7 @@ On the map: "/>
         </div>
         <ul id="menu">
             <li>
-                <a href="/papers/" title="Publications">
+                <a href="/publications/" title="Publications">
                     <span>Publications</span>
                 </a>
             </li>
