--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         <img draggable="false" src="/angel-ito.png" alt="Angel Ruiz-Angulo" title="Angel Ruiz-Angulo"
             height="160" width="160" />
         <h1>Angel Ruiz-Angulo</h1>
-        <span>associate professor university of Iceland</span><div class="social-icons">
+        <span>I am an Associate Professor in Physical Oceanography at the University of Iceland</span><div class="social-icons">
     <a href="mailto:angel@hi.is" target="_blank" rel="noopener noreferrer me" title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
