--- a/public/students/index.html
+++ b/public/students/index.html
@@ -133,11 +133,22 @@
 <p> - Charly de Marez. Project: "Characterization of mesoscale processes South of Iceland" <ahref="https://demarez.github.io/">Charly's website here</a> </p>
 <h3 id="master-students-currently-active">Master Students: Currently active</h3>
 <p> - Audria F. Dennen, MSc student. Project: "Complex inversion layers in Ísafjarðardjúp".</p>
-<h3 id="alumni">Alumni</h3>
+<h2 id="alumni">Alumni</h2>
+<h3 id="msc">MSc</h3>
 <p> - Alexandra Líf Árnadóttir, Master's Degree in Science (M.Sc) in Environmental Science at University of Iceland. Thesis: "Seasonal variability of dissolved oxygen (O2) in Berufjörður" (2024).</p>
 <p> - Jessica Wilder, Master's Degree in Science (M.Sc) in Geology at University of Iceland. Thesis: "Generation of Húsavík-Flatey Fault Rupture Models and Simulations of a Subsequent Tsunami" (2023).</p>
-<h3 id="former-interns">Former Interns</h3>
-<p>Rakel María Ellingsen</p>
+<p> Jurado de Larios, Oscar Esli,    Sensibilidad de WRF ante condiciones iniciales y de frontera :  un estudio de caso en el Valle de México     (2017). </p>    
+<p> Burgos Cuevas, Andrea,    Corrientes de gravedad en el Valle de México :  un estudio experimental     (2016) </p>   Texto completo. 
+<h3 id="bsc">BSc</h3>
+<p> Amezcua Montiel, Abril,    Mezcla inducida por una columna de burbujas en un fluido estratificado :  un estudio experimental (2018). </p> 
+<p> Pierard Manzano, Claudio Marcelo,    Coeficiente de ventilación en el Valle de México :  resultados numéricos y observaciones (2018). </p> 
+<p> Martínez Moreno, Josué,    Estudio numérico de la dispersión y el transporte en el Golfo de México asociado al aporte fluvial del Río Coatzacoalcos (2017). </p> 
+<p> Zárate Jiménez, Luz Areli,    Validación de corrientes geostróficas en el Golfo de México (2015). </p> 
+<h2 id="former-interns">Former Interns</h2>
+<p>Icelandinc Meteorological Office
+Rakel María Ellingsen
+Emil Snorri Árnason
+Kevin Dubois</p>
 
 </div>
     </main>
