--- a/public/students/index.html
+++ b/public/students/index.html
@@ -143,9 +143,9 @@
 <p> Jurado de Larios, Oscar Esli,    Sensibilidad de WRF ante condiciones iniciales y de frontera :  un estudio de caso en el Valle de México     (2017). Currently: Associate Consultant Sustainable Finance, South Pole. </p>    
 <p> Burgos Cuevas, Andrea,    Corrientes de gravedad en el Valle de México :  un estudio experimental (2016). Currently: Postdoctoral Researcher, University of Cologne, Germany. </p>   
 <h3 id="bsc">BSc</h3>
-<p> Amezcua Montiel, Abril,    Mezcla inducida por una columna de burbujas en un fluido estratificado :  un estudio experimental (2018). Currently: PhD student in Marine Geology at Alfred Wegener Institut for Polar and Marine Research.</p> 
+<p> Amezcua Montiel, Abril,    Mezcla inducida por una columna de burbujas en un fluido estratificado :  un estudio experimental (2018). Currently: PhD student in Marine Geology at Alfred Wegener Institut for Polar and Marine Research. </p> 
 <p> Pierard Manzano, Claudio Marcelo,    Coeficiente de ventilación en el Valle de México :  resultados numéricos y observaciones (2018). Currently: PhD candidate at Utrecht University. </p> 
-<p> Martínez Moreno, Josué,    Estudio numérico de la dispersión y el transporte en el Golfo de México asociado al aporte fluvial del Río Coatzacoalcos (2017). Currently: Postdoctoral Fellow at IFREMER, Brest, France</p> 
+<p> Martínez Moreno, Josué,    Estudio numérico de la dispersión y el transporte en el Golfo de México asociado al aporte fluvial del Río Coatzacoalcos (2017). Currently: Postdoctoral Fellow at IFREMER, Brest, France. </p> 
 <h3 id="former-interns">Former Interns</h3>
 <p>Icelandinc Meteorological Office
 Rakel María Ellingsen
