--- a/public/404.html
+++ b/public/404.html
@@ -90,8 +90,8 @@
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Students">
-                    <span>Students</span>
+                <a href="/students/" title="Group">
+                    <span>Group</span>
                 </a>
             </li>
             <li>
