--- a/public/location/index.html
+++ b/public/location/index.html
@@ -143,8 +143,8 @@ On the map: "/>
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Students">
-                    <span>Students</span>
+                <a href="/students/" title="Group">
+                    <span>Group</span>
                 </a>
             </li>
             <li>
@@ -177,7 +177,7 @@ Sturlugata 7, 102 Reykjavík
 Iceland</p>
 <hr>
 <h4 id="on-the-map">On the map:</h4>
-<iframe src="https://maps.app.goo.gl/XfUBA7KfY26v7rin8" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://maps.app.goo.gl/x4gnqGrbWPA6gxYv6" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
   </div>
 
