--- a/public/publications/paper3/index.html
+++ b/public/publications/paper3/index.html
@@ -148,8 +148,8 @@
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Students">
-                    <span>Students</span>
+                <a href="/students/" title="Group">
+                    <span>Group</span>
                 </a>
             </li>
             <li>
