--- a/public/students/index.html
+++ b/public/students/index.html
@@ -106,8 +106,8 @@
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Students">
-                    <span class="active">Students</span>
+                <a href="/students/" title="Group">
+                    <span class="active">Group</span>
                 </a>
             </li>
             <li>
