--- a/public/index.html
+++ b/public/index.html
@@ -124,9 +124,19 @@
 </div>
 
         <div class="buttons">
+            <a class="button" href="aboutme/" rel="noopener" title="About me">
+                <span class="button-inner">
+                    About me
+                </span>
+            </a>
             <a class="button" href="publications/" rel="noopener" title="Publications">
                 <span class="button-inner">
                     Publications
+                </span>
+            </a>
+            <a class="button" href="courses/" rel="noopener" title="Courses">
+                <span class="button-inner">
+                    Courses
                 </span>
             </a>
             <a class="button" href="students/" rel="noopener" title="Students">
