--- a/public/courses/course2/index.html
+++ b/public/courses/course2/index.html
@@ -146,6 +146,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="/aboutme/" title="About me">
+                    <span>About me</span>
+                </a>
+            </li>
+            <li>
                 <a href="/publications/" title="Publications">
                     <span>Publications</span>
                 </a>
