--- a/public/location/index.html
+++ b/public/location/index.html
@@ -138,6 +138,11 @@ On the map: "/>
         </div>
         <ul id="menu">
             <li>
+                <a href="/aboutme/" title="About me">
+                    <span>About me</span>
+                </a>
+            </li>
+            <li>
                 <a href="/publications/" title="Publications">
                     <span>Publications</span>
                 </a>
