--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -101,6 +101,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="/aboutme/" title="About me">
+                    <span>About me</span>
+                </a>
+            </li>
+            <li>
                 <a href="/publications/" title="Publications">
                     <span class="active">Publications</span>
                 </a>
