--- a/public/404.html
+++ b/public/404.html
@@ -95,7 +95,7 @@
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Group">
+                <a href="/group/" title="Group">
                     <span>Group</span>
                 </a>
             </li>
