--- a/public/location/index.html
+++ b/public/location/index.html
@@ -148,7 +148,7 @@ On the map: "/>
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Group">
+                <a href="/group/" title="Group">
                     <span>Group</span>
                 </a>
             </li>
