--- a/public/courses/course2/index.html
+++ b/public/courses/course2/index.html
@@ -156,7 +156,7 @@
                 </a>
             </li>
             <li>
-                <a href="/students/" title="Group">
+                <a href="/group/" title="Group">
                     <span>Group</span>
                 </a>
             </li>
