--- a/public/index.html
+++ b/public/index.html
@@ -134,9 +134,9 @@
                     Publications
                 </span>
             </a>
-            <a class="button" href="students/" rel="noopener" title="Students">
+            <a class="button" href="group/" rel="noopener" title="Group">
                 <span class="button-inner">
-                    Students
+                    Group
                 </span>
             </a>
             <a class="button" href="news/" rel="noopener" title="News">
