--- a/public/aboutme/index.html
+++ b/public/aboutme/index.html
@@ -138,7 +138,9 @@
 <p align="justify">
 I am currently an Associate Professor in Physical Oceanography at the Institute of Earth Sciences within the University of Iceland (Háskóli Íslands). Prior to this position I worked as a Research Scientist at the Icelandic Meteorological Office (Veðurstofa Íslands) and before that I was an Associate Professor at the <a href="https://www.atmosfera.unam.mx/"> Instituto de Ciencias de la Atmósfera y Cambio Climático, UNAM, México </a>.</p>
 <p align="justify">
-I am a Physical Oceanographer with lots of Geophysical Fluid Dynamics ideas. I did my Undergraduate studies at the Universidad Nacional Autónoma de México with Roberto Zenit and then my MSc and PhD at Caltech with Melany Hunt, followed by a Postdoctoral Research Fellow position at LDEO of Columbia University with Andreas M. Thurnherr. </p>
+I am a Physical Oceanographer with lots of Geophysical Fluid Dynamics ideas. I did my Undergraduate studies at the Universidad Nacional Autónoma de México with Roberto Zenit, Masters and PhD in Mechanical Engineering at Caltech with Melany Hunt, followed by a Postdoctoral Research Fellow position in Physical Oceanography at LDEO of Columbia University with Andreas M. Thurnherr. </p>
+<p align="justify">
+I spend most of my free time cooking, biking (cycling) and baking. I love hosting taco parties 🌮🌮 at Little Mexico (our house).</p>
 
 </div>
     </main>
