--- a/public/data/data1/index.html
+++ b/public/data/data1/index.html
@@ -162,8 +162,8 @@
                 </a>
             </li>
             <li>
-                <a href="/news/" title="News">
-                    <span>News</span>
+                <a href="/news/" title="News 🌶">
+                    <span>News 🌶</span>
                 </a>
             </li>
             <li>
