--- a/public/404.html
+++ b/public/404.html
@@ -100,8 +100,8 @@
                 </a>
             </li>
             <li>
-                <a href="/news/" title="News 🌶">
-                    <span>News 🌶</span>
+                <a href="/news/" title="News">
+                    <span>News</span>
                 </a>
             </li>
             <li>
