--- a/public/index.html
+++ b/public/index.html
@@ -139,9 +139,9 @@
                     Group
                 </span>
             </a>
-            <a class="button" href="news/" rel="noopener" title="News 🌶">
+            <a class="button" href="news/" rel="noopener" title="News">
                 <span class="button-inner">
-                    News 🌶
+                    News
                 </span>
             </a>
             <a class="button" href="RuizAngulo_CV_2024.pdf" rel="noopener" title="Resume">
