--- a/public/location/index.html
+++ b/public/location/index.html
@@ -153,8 +153,8 @@ On the map: "/>
                 </a>
             </li>
             <li>
-                <a href="/news/" title="News 🌶">
-                    <span>News 🌶</span>
+                <a href="/news/" title="News">
+                    <span>News</span>
                 </a>
             </li>
             <li>
