--- a/public/group/index.html
+++ b/public/group/index.html
@@ -140,17 +140,20 @@
 <p> - Audria F. Dennen, MSc student. Project: "Complex inversion layers in Ísafjarðardjúp".</p>
 <h2 id="alumni">Alumni</h2>
 <h3 id="phd-co-advisor">PhD (co-advisor)</h3>
-<p> Lamberto Diaz Damacillo; Bubbles in stratified media; PhD in Material Science and Engineering, UNAM; 2016. Advisors: Roberto Zenit and Angel Ruiz-Angulo. Currently: Postdoc ININ Mexico. </p>
-<p> Andrea Burgos-Cuevas; Caracterización de la capa límite atmosférica sobre la Ciudad de México; PhD in Earth Sciences; UNAM; 2021. Advisors: David Kenton Adams and Angel Ruiz-Angulo. Currently: Postdoctoral Researcher, University of Cologne, Germany. </p>
+<p> - Lamberto Diaz Damacillo; Bubbles in stratified media; PhD in Material Science and Engineering, UNAM; 2016. Advisors: Roberto Zenit and Angel Ruiz-Angulo. Currently: Postdoc ININ Mexico. </p>
+<p> - Andrea Burgos-Cuevas; Caracterización de la capa límite atmosférica sobre la Ciudad de México; PhD in Earth Sciences; UNAM; 2021. Advisors: David Kenton Adams and Angel Ruiz-Angulo. Currently: Postdoctoral Researcher, University of Cologne, Germany. </p>
 <h3 id="msc">MSc</h3>
 <p> - Alexandra Líf Árnadóttir, Master's Degree in Science (M.Sc) in Environmental Science at University of Iceland. Thesis: "Seasonal variability of dissolved oxygen (O2) in Berufjörður" (2024). Advisors: Angel Ruiz-Angulo and Andreas Macrander.</p>
 <p> - Jessica Wilder, Master's Degree in Science (M.Sc) in Geology at University of Iceland. Thesis: "Generation of Húsavík-Flatey Fault Rupture Models and Simulations of a Subsequent Tsunami" (2023). Advisors: Angel Ruiz-Angulo and Diego Melgar. Currently: Geologist at USGS.</p> 
-<p> Jurado de Larios, Oscar Esli,    Sensibilidad de WRF ante condiciones iniciales y de frontera :  un estudio de caso en el Valle de México     (2017). Currently: Associate Consultant Sustainable Finance, South Pole. </p>    
-<p> Burgos Cuevas, Andrea,    Corrientes de gravedad en el Valle de México :  un estudio experimental (2016). Currently: Postdoctoral Researcher, University of Cologne, Germany. </p>   
+<p> - Oscar Esli Jurado de Larios.     Sensibilidad de WRF ante condiciones iniciales y de frontera :  un estudio de caso en el Valle de México     (2017). Currently: Associate Consultant Sustainable Finance, South Pole. </p>    
+<p> Andrea Burgos-Cuevas    Corrientes de gravedad en el Valle de México :  un estudio experimental (2016). Currently: Postdoctoral Researcher, University of Cologne, Germany. </p>   
 <h3 id="bsc">BSc</h3>
-<p> Amezcua Montiel, Abril,    Mezcla inducida por una columna de burbujas en un fluido estratificado :  un estudio experimental (2018). Currently: PhD student in Marine Geology at Alfred Wegener Institut for Polar and Marine Research. </p> 
-<p> Pierard Manzano, Claudio Marcelo,    Coeficiente de ventilación en el Valle de México :  resultados numéricos y observaciones (2018). Currently: PhD candidate at Utrecht University. </p> 
-<p> Martínez Moreno, Josué,    Estudio numérico de la dispersión y el transporte en el Golfo de México asociado al aporte fluvial del Río Coatzacoalcos (2017). Currently: Postdoctoral Fellow at IFREMER, Brest, France. </p> 
+<p> Abril  Amezcua Montiel,     Mezcla inducida por una columna de burbujas en un fluido estratificado :  un estudio experimental (2018). Currently: PhD student in Marine Geology at Alfred Wegener Institut for Polar and Marine Research. </p> 
+<p> Claudio Marcelo Pierard Manzano,     Coeficiente de ventilación en el Valle de México :  resultados numéricos y observaciones (2018). Currently: PhD candidate at Utrecht University. </p> 
+<p> Josué Martínez Moreno,    Estudio numérico de la dispersión y el transporte en el Golfo de México asociado al aporte fluvial del Río Coatzacoalcos (2017). Currently: Postdoctoral Fellow at IFREMER, Brest, France. </p> 
+<p> A. Karnia Ramos Musalem,     Estudio de los forzamientos que generan la surgencia de Yucatán. (2013). Currently: Associate Professor in Physical Oceanography, CICESE. </p> 
+<p> Jorge Luis García Franco, Estudio sobre la evolución de la capa de mezcla en la Ciudad de México. (2016). Advisors: Michel Grutter de la Mora and Angel Ruiz-Angulo. Currently: Asistant Professor in the Escuela Nacional de Ciencias de la Tierra, UNAM. </p> 
+<p> A. Karnia Ramos Musalem,     Estudio de los forzamientos que generan la surgencia de Yucatán. (2013). Advisors: Jorge Zavala-Hidalgo and Angel Ruiz-Angulo. Currently: Associate Professor in Physical Oceanography, CICESE. </p> 
 <h3 id="former-interns">Former Interns</h3>
 <p>Icelandinc Meteorological Office
 Rakel María Ellingsen
