--- a/public/group/index.html
+++ b/public/group/index.html
@@ -154,12 +154,15 @@
 <p> Jorge Luis García Franco, Estudio sobre la evolución de la capa de mezcla en la Ciudad de México. (2016). Advisors: Michel Grutter de la Mora and Angel Ruiz-Angulo. Currently: Asistant Professor in the Escuela Nacional de Ciencias de la Tierra, UNAM. </p> 
 <p> A. Karnia Ramos Musalem,     Estudio de los forzamientos que generan la surgencia de Yucatán. (2013). Advisors: Jorge Zavala-Hidalgo and Angel Ruiz-Angulo. Currently: Associate Professor in Physical Oceanography, CICESE. </p> 
 <h3 id="former-interns">Former Interns</h3>
-<p>Icelandinc Meteorological Office
-Rakel María Ellingsen
-Emil Snorri Árnason
-Kevin Dubois</p>
-<p>Universitdad Nacional Autonoma de Mexico
-Claudio Pierrard, Daniel Robles, Evelin Camacho Soberon, Daniel Ivan Garduño Ruiz</p>
+<p>Icelandinc Meteorological Office</p>
+<p> Rakel María Ellingsen </p> 
+<p> Emil Snorri Árnason</p> 
+<p> Kevin Dubois</p> 
+<p>Universitdad Nacional Autonoma de Mexico</p>
+<p> Claudio Pierrard</p> 
+<p> Daniel Robles</p>  
+<p> Evelin Camacho Soberon</p> 
+<p> Daniel Ivan Garduño Ruiz</p> 
 
 </div>
     </main>
